# OSGridConverter

./: .autotools  .cproject  .project  .pydevproject  LICENSE  LICENSE.rst  MANIFEST.in  README.md  setup.cfg  setup.py
cpp/: GeoConv.doxyfile  Makefile  Makefile.am  README  configure  configure.ac  geo  geotest  makefile  os
cpp/dox/: Cartesian.dox  Datum.dox  Ellipsoid.dox  Helmert.dox  Matrix.dox  Parser.dox  Vector.dox
cpp/include/: Cartesian.hpp  LatitudeLongitude.hpp  OSGB36.hpp  OSGrid.hpp  algebra.hpp  coordinates.hpp  geoconv.hpp
cpp/include/coordinates/: LatitudeLongitude.hpp  OSGrid.hpp  Parser.hpp
cpp/include/mapping/: Datum.hpp  Ellipsoid.hpp  Helmert.hpp
cpp/python/: Lame.cpp  PyGridPoint.cpp  PyGridPoint.hpp  PyHeader.hpp  PyLatLongPoint.cpp  PyLatLongPoint.hpp
cpp/src/: Cartesian.cpp  Cartesian.hpp  Datum.cpp  Datum.hpp  Ellipsoid.cpp  Ellipsoid.hpp  Helmert.cpp  Helmert.hpp  LatitudeLongitude.cpp  LatitudeLongitude.hpp  Makefile.am  Matrix.cpp  Matrix.hpp  OSGB36.cpp  OSGB36.hpp  OSGrid.cpp  OSGrid.hpp  Parser.cpp  Parser.hpp  Specification.hpp  Vector.cpp  Vector.hpp  algebra.hpp  geoconv.hpp  main.cpp  mapping.hpp  osgridconv.hpp  test.cpp  test.hpp
cpp/src/coordinates/: Cartesian.cpp  Cartesian.hpp  LatitudeLongitude.cpp  LatitudeLongitude.hpp  OSGrid.cpp  OSGrid.hpp  Parser.cpp  Parser.hpp
cpp/src/mapping/: ApproximateHelmert.cpp  ApproximateHelmert.hpp  Datum.cpp  Datum.hpp  Ellipsoid.cpp  Ellipsoid.hpp  ExactHelmert.cpp  ExactHelmert.hpp  Helmert.cpp  Helmert.hpp  OSGB36.cpp  OSGB36.hpp  algebra.cpp  algebra.hpp
cpp/src/tests/: Generator.cpp  Generator.hpp  Suite.cpp  Suite.hpp  TestBase.cpp  TestBase.hpp  Tests.cpp  Tests.hpp
cpp/test/: ALgebraTests_test.cpp  AlgebraTests.cpp  AlgebraTests.hpp  Generator.cpp  Generator.hpp  Makefile.am  Suite.cpp  Suite.hpp  TestBase.cpp  TestBase.hpp  Tests.cpp  Tests.hpp  main.cpp
cpp/tests/: Generator.cpp  Generator.hpp  Suite.hpp  TestBase.hpp  Tests.cpp  main.cpp
geoconv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: LICENSE.txt  MANIFEST.in  README.rst  main.py  setup.py
python/OSGridConverter/: __init__.py  base.py  grid.py  latlong.py
python/OSGridConverter/algebra/: __init__.py  core.py  matrix.py  rotation.py  vector.py
python/OSGridConverter/cartesian/: __init__.py  algebra.py  transform.py  vector.py
python/OSGridConverter/coordinates/: cartesian.py  grid.py  latlong.py
python/OSGridConverter/mapping/: __init__.py  datum.py  defaultGrid.py  ellipsoids.py  meta.py  reference.py
python/test/: __init__.py  baseTest.py  test_algebra.py  test_script.py  types.py
utils/: __init__.py  checkForLibs.py  clean.py  findSource.py
