[metadata]
name = geoconv
version = 0.6
description = Utility to convert between Cartesian coordinates on the ground, longitude / latitude coordinates, and OS Grid reference strings
url = https://github.com/jdstmporter/OSGridConverter.git

author = Julian Porter
author_email = julian@jpembedded.solution
license = file: LICENSE.rst
keywords = 
	Ordnance Survey
	OS Grid
	WGS84
	Geodesy
	Longitude
	Latitude
	Cartesian
classifiers =
    Development Status :: 4 Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio :: Conversion
    

[options]
zip_safe = True
include_package_data = True

