bin_PROGRAMS=geotest 
geotest_SOURCES = main.cpp coordinates/Cartesian.cpp coordinates/LatitudeLongitude.cpp coordinates/OSGrid.cpp coordinates/Parser.cpp mapping/Datum.cpp mapping/Ellipsoid.cpp mapping/Helmert.cpp mapping/ExactHelmert.cpp mapping/ApproximateHelmert.cpp mapping/OSGB36.cpp tests/Generator.cpp tests/Suite.cpp tests/TestBase.cpp tests/Tests.cpp
 
AM_CPPFLAGS = -g3 -Wall -fmessage-length=0 -std=c++14 -I/usr/include  
AM_LDFLAGS = -L/usr/lib -lcppunit 
 